add json config

--- a/pcgrllm/llm_client/config.example.json
+++ b/pcgrllm/llm_client/config.example.json
@@ -15,5 +15,15 @@
     "full-model-name": "gpt-4o-2024-08-06",
     "api_host": "https://api.openai.com/v1",
     "api_key": ""
+  },
+  "gpt-4o-gil": {
+    "full-model-name": "gpt-4o-2024-08-06",
+    "api_host": "https://api.openai.com/v1",
+    "api_key": ""
+  },
+  "gpt-4o-mini": {
+    "full-model-name": "gpt-4o-mini",
+    "api_host": "https://api.openai.com/v1",
+    "api_key": ""
   }
 }
