--- a/Dockerfile.cu11
+++ b/Dockerfile.cu11
@@ -1,39 +1,52 @@
-# CUDA 11.8 이미지를 기반으로 함
-FROM nvidia/cuda:11.8.0-devel-ubuntu22.04
+# Use CUDA 11.8 base image
+FROM nvidia/cuda:11.8.0-devel-ubuntu20.04
 
-# 필수 패키지 업데이트 및 설치
+# Install required packages
 RUN apt-get update && apt-get install -y \
     wget \
     coreutils \
     util-linux \
     && apt-get clean
 
+# Install Anaconda
+RUN wget https://repo.anaconda.com/archive/Anaconda3-2023.07-1-Linux-x86_64.sh -O ~/anaconda.sh && \
+    bash ~/anaconda.sh -b -p /opt/conda && \
+    rm ~/anaconda.sh
 
-# 아나콘다 설치
-RUN wget https://repo.anaconda.com/archive/Anaconda3-2023.07-1-Linux-x86_64.sh -O ~/anaconda.sh
-RUN bash ~/anaconda.sh -b -p /opt/conda
-RUN rm ~/anaconda.sh
-# 아나콘다를 환경 변수에 추가
+# Add Anaconda to the PATH
 ENV PATH="/opt/conda/bin:$PATH"
-#"
 
-# 기본 환경에서 Python 3.11 설치
+# Install Python 3.11 in the base conda environment
 RUN conda install -y python=3.11
 
-# 작업 디렉토리 생성
+# Set the working directory
 WORKDIR /app
 
-# requirements.txt 복사
+# Copy the requirements file
 COPY requirements.txt .
 
-# 기본 환경에서 requirements.txt 설치
+# Install dependencies from requirements.txt using pip
 RUN /opt/conda/bin/pip install -r requirements.txt
+
+# Install additional dependencies
 RUN /opt/conda/bin/pip install opencv-python-headless
-# RUN pip install "jax[cuda11]"
 
-# RUN /opt/conda/bin/pip uninstall -y chex jax optax
-# RUN pip install jax==0.4.7 jaxlib==0.4.7+cuda11.cudnn82 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
-RUN /opt/conda/bin/pip install jax==0.4.25 jaxlib==0.4.25+cuda11.cudnn86 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html orbax-checkpoint chex flax optax nvidia-cudnn-cu11==8.6.0.163
+# Install JAX and compatible CUDA versions
+RUN /opt/conda/bin/pip install jax==0.4.25 \
+    jaxlib==0.4.25+cuda11.cudnn86 \
+    -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html \
+    orbax-checkpoint chex flax optax nvidia-cudnn-cu11==8.6.0.163
 
-# 컨테이너 실행 시 기본 Python 명령어 설정
+RUN apt-get update && apt-get install -y \
+    cuda-command-line-tools-11-8 \
+    cuda-cupti-dev-11-8 \
+    && apt-get clean
+
+# Ensure CUDA environment variables are set correctly
+ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/cuda/extras/CUPTI/lib64:${LD_LIBRARY_PATH}
+ENV CUDA_HOME=/usr/local/cuda
+
+
+
+# Default command when starting the container
 CMD ["bash"]
